--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "npx webpack serve --config webpack.dev.js",
-    "lint": "npx eslint src/**/*.ts",
+    "lint": "npx eslint src/. --ext .ts",
     "build": "npx webpack"
   },
   "author": "Matthias Fischer",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "css-loader": "^6.7.1",
     "eslint": "^8.23.0",
     "html-webpack-plugin": "^5.5.0",
@@ -22,8 +24,5 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
-  },
-  "eslintConfig": {
-    "extends": "eslint:recommended"
   }
 }
